tests/errors/syn_call4.java
public class syn_call4{
public static void main(String[] args){
 ) ;
}
}